# HelloPython

./: .gitignore  README.md  app.py  condition_examples.py  data_structure_examples.py  format.sh  function_examples.py  generics_examples.py  main.py  pyproject.toml  string_examples.py
applications/alarm_clock/: README.md
applications/alarm_clock/src/: __init__.py  alarm_clock.py  gui.py
applications/expense_api/src/: expense_client.py  mock_server.py
applications/expenses/: README.md  expenses.json
applications/expenses/src/: expense_manager.py
applications/expenses_api/: README.md  expenses.json  main.py
applications/expenses_api/src/: expenses.json  expenses_client.py  main.py
applications/expenses_api/src/client/: __init__.py  client.py
applications/expenses_api/src/models/: __init__.py  expense.py
applications/expenses_api/src/server/: __init__.py  server.py
applications/stop_watch/: README.md
applications/stop_watch/src/: __init__.py  gui.py  stop_watch.py
applications/weather/: README.md
applications/weather/src/: __init__.py  config.py  gui.py  weather_service.py
fundamentals/: README.md  condition_examples.py  datetime_examples.py  file_examples.py  generics_examples.py  loop_examples.py  math_examples.py  none_examples.py  oop_examples.py  operator_examples.py  threads_examples.py
hello_python/: __init__.py
