[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "hello_python"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 